Add link placeholders for examples subpages

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,13 +9,19 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
         <div class="flex flex-col gap-2 lg:order-5">
             <b>Resources</b>
             <ul class="text-sm flex flex-col gap-2">
-                <li><a href="/">For pets</a></li>
-                <li><a href="/">For friends</a></li>
-                <li><a href="/">For relatives</a></li>
-                <li><a href="/">To the religious</a></li>
-                <li><a href="/">To those who live far away</a></li>
+                <li><a href="/examples">All examples</a></li>
+                <li><a href="/examples/pets">For pets</a></li>
+                <li><a href="/examples/friends">For friends</a></li>
+                <li><a href="/examples/relatives">For relatives</a></li>
+                <li><a href="/examples/religious">To the religious</a></li>
                 <li>
-                    <a href="/">To those who want to learn their culture</a>
+                    <a href="/examples/living-abroad"
+                        >To those who live far away</a>
+                </li>
+                <li>
+                    <a href="/examples/learn-culture"
+                        >To those who want to learn their culture</a
+                    >
                 </li>
             </ul>
         </div>
@@ -36,6 +42,7 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
                 <li><a href="/blog">Blog</a></li>
                 <li><a href="/pricing">Pricing</a></li>
                 <li><a href="/how-it-works">How it works</a></li>
+                <li><a href="/examples">Who is this for?</a></li>
             </ul>
         </div>
 
