Fix tailwind class name

--- a/src/components/StickyNav.astro
+++ b/src/components/StickyNav.astro
@@ -44,7 +44,7 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
         <a class="hover:underline" href="/how-it-works">How it works</a>
         <a class="hover:underline" href="/examples">Who is this for?</a>
 
-        <div class="hidden lg:flex flex-grow"></div>
+        <div class="hidden lg:flex grow"></div>
 
         <!-- <a
             target="_blank"
