--- a/src/components/StickyNav.astro
+++ b/src/components/StickyNav.astro
@@ -37,7 +37,7 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
 
     <div
         id="navLinkContainer"
-        class="hidden flex-col gap-4 mt-4 lg:divide-y-0 lg:mt-0 lg:flex lg:flex-row lg:gap-6 lg:flex-grow lg:items-center"
+        class="hidden flex-col gap-4 mt-4 lg:divide-y-0 lg:mt-0 lg:flex lg:flex-row lg:gap-6 lg:grow lg:items-center"
     >
         <a class="hover:underline" href="/blog">Blog</a>
         <a class="hover:underline" href="/pricing">Pricing</a>
