Add too busy link to footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,8 +15,12 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
                 <li><a href="/examples/relatives">For relatives</a></li>
                 <li><a href="/examples/religious">To the religious</a></li>
                 <li>
+                    <a href="/examples/too-busy">To those who are too busy</a>
+                </li>
+                <li>
                     <a href="/examples/living-abroad"
-                        >To those who live far away</a>
+                        >To those who live far away</a
+                    >
                 </li>
                 <li>
                     <a href="/examples/learn-culture"
