--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -1,12 +1,25 @@
 ---
 import MasterLayout from "./MasterLayout.astro";
 const { frontmatter } = Astro.props;
+import { Image } from "astro:assets";
 ---
 
 <MasterLayout
     title={`${frontmatter.title}`}
     description={frontmatter.description}
 >
+    <div
+        class="flex flex-col align-center items-center justify-center w-full h-72 overflow-hidden"
+    >
+        <Image
+            class="w-full"
+            src={frontmatter.image.url}
+            alt={frontmatter.image.alt}
+            width="512"
+            height="512"
+        />
+    </div>
+
     <section
         class="flex flex-col gap-4 m-4 blogPost lg:max-w-6/12 lg:mx-auto lg:my-16"
     >
