Add Google Analytics tag

--- a/src/layouts/MasterLayout.astro
+++ b/src/layouts/MasterLayout.astro
@@ -10,6 +10,21 @@ const { title, description } = Astro.props;
 
 <html lang="en" class="text-stone-800 bg-stone-100 font-light">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=G-HFEKKX4VEP"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("config", "G-HFEKKX4VEP");
+        </script>
+
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="generator" content={Astro.generator} />
