Add links to waitlist page

--- a/src/components/StickyNav.astro
+++ b/src/components/StickyNav.astro
@@ -61,8 +61,7 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
         > -->
 
         <a
-            target="_blank"
-            href=""
+            href="/waitlist"
             class="bg-stone-800 text-stone-200 rounded px-4 py-2 hover:bg-stone-600"
             >Join the waitlist <i class="fas fa-arrow-right"></i></a
         >
