--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,8 +24,7 @@ import FeatureCard from "../components/FeatureCard.astro";
             </a>
 
             <a
-                target="_blank"
-                href=""
+                href="/waitlist"
                 class="p-2 text-center bg-stone-800 text-stone-200 rounded"
                 >Join the waitlist <i class="fas fa-arrow-right"></i></a
             >
