Add link to online memorials page

--- a/src/pages/how-it-works/index.astro
+++ b/src/pages/how-it-works/index.astro
@@ -64,6 +64,13 @@ import Petapetual from "../../components/Petapetual.astro";
                 to view it and leave a loving message in the guestbook.
             </p>
 
+            <p class="p-4 bg-blue-200 rounded border border-blue-400">
+                If you are interested, you can read our <a
+                    href="/how-it-works/online-memorials"
+                    class="underline text-blue-600">Online Memorials</a
+                > page.
+            </p>
+
             <p>
                 All memorials created under a paid plan can subscribe to a <a
                     class="underline text-blue-600"
