--- a/src/pages/examples/index.astro
+++ b/src/pages/examples/index.astro
@@ -13,8 +13,8 @@ import ExampleLinkCard from "../../components/ExampleLinkCard.astro";
     <p>
         <Petapetual /> memorials and services are for anybody and everybody. Whether
         you have lost a family member, or a dear family friend, or even a beloved
-        pet, grief is grief, and the desire to remember and pay respects to them
-        is a very natural response that comes from a place of love. We built <Petapetual
+        pet, grief is grief. The desire to remember and pay respects to them is a
+        very natural response that comes from a place of love. We built <Petapetual
         /> to allow anybody to commemorate their late loved ones, and to do so easily
         and conveniently no matter where they are in the world.
     </p>
@@ -28,22 +28,13 @@ import ExampleLinkCard from "../../components/ExampleLinkCard.astro";
     <h2 class="text-xl font-semibold">For You</h2>
     <div class="flex flex-col lg:grid lg:grid-cols-2 gap-4">
         <ExampleLinkCard
-            title="Religious?"
-            href="/examples/religious"
-            iconClass="fa-solid fa-person-praying"
-            iconColor="text-stone-200"
-            bgColor="bg-amber-600"
-        >
-            Hello world
-        </ExampleLinkCard>
-        <ExampleLinkCard
             title="Living Abroad?"
             href="/examples/living-abroad"
             iconClass="fas fa-plane -rotate-45"
             iconColor="text-stone-200"
             bgColor="bg-amber-600"
         >
-            Hello world
+            Pay respects from anywhere.
         </ExampleLinkCard>
         <ExampleLinkCard
             title="Too Busy?"
@@ -52,16 +43,16 @@ import ExampleLinkCard from "../../components/ExampleLinkCard.astro";
             iconColor="text-stone-200"
             bgColor="bg-amber-600"
         >
-            Hello world
+            Visit anytime, on your schedule.
         </ExampleLinkCard>
         <ExampleLinkCard
-            title="Clueless About Culture?"
+            title="Confused?"
             href="/examples/learn-culture"
             iconClass="fa-solid fa-hands-praying"
             iconColor="text-stone-200"
             bgColor="bg-amber-600"
         >
-            Hello world
+            Services tailored to your culture.
         </ExampleLinkCard>
     </div>
 
@@ -75,7 +66,7 @@ import ExampleLinkCard from "../../components/ExampleLinkCard.astro";
             iconColor="text-stone-200"
             bgColor="bg-sky-600"
         >
-            Hello world
+            Bonded by blood, inseparable by fate.
         </ExampleLinkCard>
         <ExampleLinkCard
             title="For Friends"
@@ -84,7 +75,7 @@ import ExampleLinkCard from "../../components/ExampleLinkCard.astro";
             iconColor="text-stone-200"
             bgColor="bg-sky-600"
         >
-            Hello world
+            The family we weren't given, but chose.
         </ExampleLinkCard>
         <ExampleLinkCard
             title="For Pets"
@@ -93,7 +84,7 @@ import ExampleLinkCard from "../../components/ExampleLinkCard.astro";
             iconColor="text-stone-200"
             bgColor="bg-sky-600"
         >
-            Hello world
+            So full of love, and just as loved in return.
         </ExampleLinkCard>
     </div>
 </DefaultPageLayout>
