--- a/src/pages/examples/too-busy.astro
+++ b/src/pages/examples/too-busy.astro
@@ -19,7 +19,7 @@ import Petapetual from "../../components/Petapetual.astro";
         in the modern age.
     </p>
 
-    <h2 class="text-xl font-semibold">Online Memorials</h2>
+    <h2 class="text-xl font-semibold">Always Available</h2>
 
     <p>
         When you create a <a
