Add intro paragraph

--- a/src/pages/examples/living-abroad.astro
+++ b/src/pages/examples/living-abroad.astro
@@ -11,7 +11,19 @@ import Petapetual from "../../components/Petapetual.astro";
         <Petapetual /> for those living overseas
     </h1>
 
-    <p></p>
+    <p>
+        Are you living far away from your loved one's final resting place?
+        Perhaps you are studying or working abroad and now find yourself
+        separated from your hometown and family? In such cases, it is hard to
+        show up and pay respects at a physical cemetery, temple, or columbarium.
+    </p>
+
+    <p>
+        <Petapetual /> aims to try and mitigate the feeling of disconnection and
+        distance in the remembrance process: whilst there is nothing that can replace
+        showing up in person, we try to make it as convenient as possible for you
+        to pay your respects from hundreds to thousands of miles away.
+    </p>
 
     <h2 class="text-xl font-semibold">Always in reach</h2>
 
