Replace reused tailwindCSS classes with single css class for blue links

--- a/src/pages/examples/learn-culture.astro
+++ b/src/pages/examples/learn-culture.astro
@@ -22,7 +22,7 @@ import Petapetual from "../../components/Petapetual.astro";
     <p>
         <Petapetual /> aims to assist you in this aspect. We believe that, <a
             href="/how-it-works"
-            class="underline text-blue-600">amongst other services we provide</a
+            class="blueLink">amongst other services we provide</a
         >, an online memorial with us is also an opportunity for education. We
         aim to provide you with information, services, and useful reminders that
         are aligned with the traditions you want to observe.
@@ -32,23 +32,21 @@ import Petapetual from "../../components/Petapetual.astro";
 
     <p>
         By default, all <Petapetual />
-        <a class="underline text-blue-600" href="/how-it-works/online-memorials"
-            >memorials</a
-        > are culturally and religiously agnostic: we do not make any assumptions
-        or opinionated choices as to what and how things should be done. However,
-        if you so choose to, you can set a <i>cultural preference</i> for your memorial,
-        which will tell us which traditions you want your memorial to subscribe to.
+        <a class="blueLink" href="/how-it-works/online-memorials">memorials</a> are
+        culturally and religiously agnostic: we do not make any assumptions or opinionated
+        choices as to what and how things should be done. However, if you so choose
+        to, you can set a <i>cultural preference</i> for your memorial, which will
+        tell us which traditions you want your memorial to subscribe to.
     </p>
 
     <p>
         For example, if you set a memorial's cultural preference to <i
             >Buddhist</i
         >, then we will suggest and bias your memorial towards more Buddhist <a
-            class="underline text-blue-600"
+            class="blueLink"
             href="/how-it-works/tributes">tributes</a
-        > and <a
-            class="underline text-blue-600"
-            href="/how-it-works/prayer-streams">prayer streams</a
+        > and <a class="blueLink" href="/how-it-works/prayer-streams"
+            >prayer streams</a
         >.
     </p>
 
