--- a/src/pages/examples/living-abroad.astro
+++ b/src/pages/examples/living-abroad.astro
@@ -33,7 +33,7 @@ import Petapetual from "../../components/Petapetual.astro";
         required. Simply sign in whenever you want to, or whenever you miss the dearly
         departed and visit their <a
             href="/how-it-works/online-memorials"
-            class="underline text-blue-600">virtual memorial</a
+            class="blueLink">virtual memorial</a
         >.
     </p>
 
@@ -44,7 +44,7 @@ import Petapetual from "../../components/Petapetual.astro";
         memorials so you can all remember your late loved ones together: write
         loving messages in the guestbook, place <a
             href="/how-it-works/tributes"
-            class="underline text-blue-600">tributes</a
+            class="blueLink">tributes</a
         >, and reminisce with one another across oceans and time zones.
     </p>
 </DefaultPageLayout>
