--- a/src/pages/examples/too-busy.astro
+++ b/src/pages/examples/too-busy.astro
@@ -23,7 +23,7 @@ import Petapetual from "../../components/Petapetual.astro";
 
     <p>
         When you create a <a
-            class="underline text-blue-600"
+            class="blueLink"
             href="/how-it-works/online-memorials">memorial</a
         > for your late loved one on <Petapetual />, we take care of everything
         for you so that you can focus on what's important. Your memorial will be
@@ -35,7 +35,7 @@ import Petapetual from "../../components/Petapetual.astro";
 
     <p>
         All memorials on paid plans come with a 24/7 <a
-            class="underline text-blue-600"
+            class="blueLink"
             href="/how-it-works/prayer-streams">virtualized prayer</a
         > service. Rest easy knowing that even when you are going about your busy
         day, your online memorial is receiving your prayers and blessings.
