--- a/src/pages/how-it-works/index.astro
+++ b/src/pages/how-it-works/index.astro
@@ -21,21 +21,16 @@ import Petapetual from "../../components/Petapetual.astro";
 
             <ul class="list-disc m-8">
                 <li class="list-item">
-                    <a href="#memorials" class="text-blue-600 underline"
-                        >Memorials</a
+                    <a href="#memorials" class="blueLink">Memorials</a>
+                </li>
+
+                <li class="list-item">
+                    <a href="#prayer-streams" class="blueLink">Prayer Streams</a
                     >
                 </li>
 
                 <li class="list-item">
-                    <a href="#prayer-streams" class="text-blue-600 underline"
-                        >Prayer Streams</a
-                    >
-                </li>
-
-                <li class="list-item">
-                    <a href="#tributes" class="text-blue-600 underline"
-                        >Tributes</a
-                    >
+                    <a href="#tributes" class="blueLink">Tributes</a>
                 </li>
             </ul>
         </section>
@@ -67,13 +62,13 @@ import Petapetual from "../../components/Petapetual.astro";
             <p class="p-4 bg-blue-200 rounded border border-blue-400">
                 If you are interested, you can read our <a
                     href="/how-it-works/online-memorials"
-                    class="underline text-blue-600">Online Memorials</a
+                    class="blueLink">Online Memorials</a
                 > page.
             </p>
 
             <p>
                 All memorials created under a paid plan can subscribe to a <a
-                    class="underline text-blue-600"
+                    class="blueLink"
                     href="#prayer-streams">prayer stream</a
                 > in order to receive virtual prayers 24/7.
             </p>
@@ -98,7 +93,7 @@ import Petapetual from "../../components/Petapetual.astro";
                 receives prayers, you can read up on our approach and
                 implementation on the <a
                     href="/how-it-works/prayer-streams"
-                    class="underline text-blue-600">Prayer Streams</a
+                    class="blueLink">Prayer Streams</a
                 > page.
             </p>
 
@@ -129,7 +124,7 @@ import Petapetual from "../../components/Petapetual.astro";
                 If you are interested, you can read up on our approach and
                 implementation on the <a
                     href="/how-it-works/tributes"
-                    class="underline text-blue-600">Memorial Tributes</a
+                    class="blueLink">Memorial Tributes</a
                 > page.
             </p>
 
