--- a/src/pages/how-it-works/online-memorials.astro
+++ b/src/pages/how-it-works/online-memorials.astro
@@ -40,10 +40,10 @@ import Petapetual from "../../components/Petapetual.astro";
             <p>
                 Memorials have access to offerings such as <a
                     href="/how-it-works/prayer-streams"
-                    class="underline text-blue-600">prayer streams</a
+                    class="blueLink">prayer streams</a
                 > and <a
                     href="/how-it-works/tributes"
-                    class="underline text-blue-600">memorial tributes</a
+                    class="blueLink">memorial tributes</a
                 >, which you can use to further honor your late loved ones.
             </p>
         </section>
