--- a/src/pages/how-it-works/tributes.astro
+++ b/src/pages/how-it-works/tributes.astro
@@ -97,7 +97,7 @@ import TributeWidget from "../../components/TributeWidget.astro";
         There is no limit to the amount of tributes that can be placed on a
         memorial. Multiple instances of the same tribute on a memorial will be
         shown, and the effects stack. For example, if multiple people have
-        placed <a href="#active" class="italic underline text-blue-600"
+        placed <a href="#active" class="italic blueLink"
             >active prayer tributes</a
         > on one memorial, prayers from all of them will be applied.
     </p>
@@ -107,9 +107,9 @@ import TributeWidget from "../../components/TributeWidget.astro";
     <p>
         Aside from the religious and cultural backgrounds they are from,
         tributes can be separated into two categories: <a
-            class="italic underline text-blue-600"
+            class="italic blueLink"
             href="#cosmetic">cosmetic</a
-        > and <a class="italic underline text-blue-600" href="#active">active</a
+        > and <a class="italic blueLink" href="#active">active</a
         >.
     </p>
 
@@ -126,7 +126,7 @@ import TributeWidget from "../../components/TributeWidget.astro";
         These tributes are both decorative <i>and</i> functional. They are all associated
         with a service we provide for you. For example, you can purchase an active
         tribute to say prayers or blessings for your memorial 24/7, as a supplementary
-        <a class="underline text-blue-600" href="/how-it-works/prayer-streams"
+        <a class="blueLink" href="/how-it-works/prayer-streams"
             >prayer stream</a
         >.
     </p>
