--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ import FeatureCard from "../components/FeatureCard.astro";
                 <br />
                 Want to know more? Read up on <a
                     href="/how-it-works"
-                    class="underline text-blue-600">how it works</a
+                    class="blueLink">how it works</a
                 >.
             </FeatureCard>
 
