--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -30,7 +30,7 @@ const shouldShowImage = (frontmatter.image) && (frontmatter.image.url) && (front
         class="flex flex-col gap-4 m-4 blogPost lg:max-w-6/12 lg:mx-auto lg:my-16"
     >
         <div class="flex flex-col">
-            <a href="/blog" class="underline text-blue-600"
+            <a href="/blog" class="blueLink"
                 >&NestedLessLess; Back to Blog index</a
             >
             <h1 class="text-2xl font-semibold">{frontmatter.title}</h1>
