--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -26,8 +26,7 @@ const sortedAllPosts = allPosts
                         href={post.url}
                         class="
             font-semibold
-            underline
-            text-blue-600"
+            blueLink"
                     >
                         {post.frontmatter.title}
                     </a>
