--- a/src/pages/examples/friends.astro
+++ b/src/pages/examples/friends.astro
@@ -1,12 +1,21 @@
 ---
 import DefaultPageLayout from "../../layouts/DefaultPageLayout.astro";
 import Petapetual from "../../components/Petapetual.astro";
+import { Image } from "astro:assets";
 ---
 
 <DefaultPageLayout
     title="Late Friends"
     description="Losing a close friend is a unique pain. Learn how to pay respects & honor their memory. Petapetual offers a peaceful space to build a lasting online tribute for your chosen family."
 >
+    <Image
+        src="https://images.unsplash.com/photo-1506869640319-fe1a24fd76dc?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=2070"
+        alt="Friends are the family we choose for ourselves. Honor them today with a Petapetual online memorial and carry them with you wherever you go."
+        class="w-full h-48 lg:h-64 object-cover self-center rounded"
+        width="256"
+        height="256"
+    />
+
     <h1 class="text-2xl font-semibold"><Petapetual /> for late friends</h1>
 
     <p>
