--- a/src/pages/examples/relatives.astro
+++ b/src/pages/examples/relatives.astro
@@ -1,12 +1,21 @@
 ---
 import DefaultPageLayout from "../../layouts/DefaultPageLayout.astro";
 import Petapetual from "../../components/Petapetual.astro";
+import { Image } from "astro:assets";
 ---
 
 <DefaultPageLayout
     title="Late Relatives"
     description="Navigating the loss of a family member is difficult. Learn how to pay respects and honor their memory. Petapetual offers a peaceful space to build a lasting online tribute."
 >
+    <Image
+        src="https://images.unsplash.com/photo-1559734840-f9509ee5677f?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=987"
+        alt="Bonded by blood but inseparable by fate- create a Petapetual online memorial to honor them today."
+        class="w-full h-48 lg:h-64 object-cover self-center rounded"
+        width="256"
+        height="256"
+    />
+
     <h1 class="text-2xl font-semibold">
         <Petapetual /> for dearly departed relatives
     </h1>
