--- a/src/pages/examples/too-busy.astro
+++ b/src/pages/examples/too-busy.astro
@@ -1,12 +1,21 @@
 ---
 import DefaultPageLayout from "../../layouts/DefaultPageLayout.astro";
 import Petapetual from "../../components/Petapetual.astro";
+import { Image } from "astro:assets";
 ---
 
 <DefaultPageLayout
     title="For Busy People"
     description="Today's world demands a lot of your time and attention, but why should you have to compromise on paying respects to your late loved ones? Petapetual was created to make rememberance more convenient in the modern age."
 >
+    <Image
+        src="https://images.unsplash.com/photo-1620809975674-10b8ff5f8e58?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=2070"
+        alt="Life can get busy and hectic, and this can mean it becomes difficult to take a moment to pay respects or remember those that have passed on. Petapetual is a convenient online solution to help with this. Access your memorials anytime, anywhere."
+        class="w-full h-48 lg:h-64 object-cover self-center rounded"
+        width="256"
+        height="256"
+    />
+
     <h1 class="text-2xl font-semibold"><Petapetual /> for the busy</h1>
 
     <p>
