Adjust margins in lg breakpoint

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,9 +31,7 @@ import FeatureCard from "../components/FeatureCard.astro";
         </div>
     </section>
 
-    <section
-        class="mx-4 mt-4 lg:mt-16 lg:mx-auto lg:max-w-8/12 flex flex-row gap-8"
-    >
+    <section class="mx-4 mt-4 lg:mt-16 lg:mx-20 flex flex-row gap-8">
         <Incense />
 
         <div class="flex flex-col gap-8 lg:gap-16 grow my-16">
