--- a/src/components/StickyNav.astro
+++ b/src/components/StickyNav.astro
@@ -6,7 +6,7 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
 
 <nav
     id="navbar"
-    class="flex flex-col lg:flex-row lg:gap-16 bg-stone-100/75 backdrop-blur rounded-xl p-4 lg:sticky lg:top-4 lg:mx-4 lg:mb-4 transition-all ease-in-out duration-500"
+    class="flex flex-col lg:flex-row lg:gap-16 bg-stone-100/75 backdrop-blur rounded-xl p-4 lg:sticky lg:top-4 lg:mx-4 lg:mb-4 transition-all ease-in-out duration-500 z-50"
 >
     <div class="flex flex-row justify-between items-center">
         <div class="flex flex-row gap-1 items-center">
